--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,3 +27,8 @@ copyright: Copyright &copy; 2021 InfinitzHost
 repo_url: https://github.com/InfinitzHost/Knowledgebase
 markdown_extensions:
   - admonition
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/InfinitzHost
+    
